@startuml SRP
class Car {
  -_id : String
  -_model : String
  -_brand : String
  +Car(id : String, model : String, brand : String)
  +getId() : String
  +getModel() : String
  +getBrand() : String
  +getFullName() : String
  +compareTo(other : Car) : int
}

class CarStore {
  -_carsDb : List<Car>
  +getCar(id : String) : Car
  +getCars() : List<Car>
}

class CarManager {
  -_carDAO : CarStore
  +CarManager(carDAO : CarStore)
  +getCar(id : String) : Car
  +getAllCars() : List<Car>
  +getCarNames() : String
  +getBestCar() : Car
}

CarStore o-- Car
CarManager --> CarStore
@enduml